--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<title data-ng-bind="$root.title + $root.titleDetail + ' | Okcash Insight'">Okcash Insight</title>
-	<meta name="keywords" content="Okcash, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
-	<meta name="description" content="Okcash Insight. View detailed information on all Okcash transactions and block. {{ $root.title + $root.titleDetail }}">
+	<title data-ng-bind="$root.title + $root.titleDetail + ' | Insight'">Insight</title>
+	<meta name="keywords" content="okcash, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
+	<meta name="description" content="Okcash Insight. View detailed information on all okcash transactions and block. {{ $root.title + $root.titleDetail }}">
 	<link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
 	<link rel="stylesheet" href="css/main.min.css">
@@ -64,7 +64,6 @@
         ]
       </div>
       <a class="insight m10v pull-right" target="_blank" href="http://insight.is">insight <small>API v{{version}}</small></a>
-      <a class="insight m10v pull-left" target="_blank" href="http://okcash.co">okcash.co</a>
     </div>
   </div>
   <script language="javascript">window.apiPrefix = '/api';</script>
